--- a/environment.yml
+++ b/environment.yml
@@ -1,109 +1,13 @@
-name: pytorch_learn_env
+name: fashion_mnist_env
 channels:
   - pytorch
+  - conda-forge
   - defaults
 dependencies:
-  - aom=3.6.0=h313beb8_0
-  - blas=1.0=openblas
-  - bottleneck=1.4.2=py312ha86b861_0
-  - brotli-python=1.0.9=py312h313beb8_9
-  - brotlicffi=1.0.9.2=py312h313beb8_1
-  - bzip2=1.0.8=h80987f9_6
-  - ca-certificates=2025.9.9=hca03da5_0
-  - cairo=1.18.4=h191e429_0
-  - certifi=2025.8.3=py312hca03da5_0
-  - cffi=1.17.1=py312h3eb5a62_1
-  - charset-normalizer=3.3.2=pyhd3eb1b0_0
-  - contourpy=1.3.1=py312h48ca7d4_0
-  - cpuonly=2.0=0
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - dav1d=1.2.1=h80987f9_0
-  - expat=2.7.1=h313beb8_0
-  - filelock=3.17.0=py312hca03da5_0
-  - fontconfig=2.14.1=h6402c1e_3
-  - fonttools=4.55.3=py312h80987f9_0
-  - freetype=2.13.3=h47d26ad_0
-  - fribidi=1.0.10=h1a28f6b_0
-  - gettext=0.21.0=hbdbcc25_2
-  - gmp=6.3.0=h313beb8_0
-  - gmpy2=2.2.1=py312h5c1b81f_0
-  - graphite2=1.3.14=hc377ac9_1
-  - harfbuzz=10.2.0=he637ebf_1
-  - icu=73.1=h313beb8_0
-  - idna=3.7=py312hca03da5_0
-  - jinja2=3.1.6=py312hca03da5_0
-  - joblib=1.5.1=py312hca03da5_0
-  - jpeg=9f=h2f69dba_0
-  - kiwisolver=1.4.8=py312h313beb8_0
-  - lcms2=2.16=he26ebf3_1
-  - lerc=4.0.0=h313beb8_0
-  - libavif=1.1.1=h80987f9_0
-  - libcxx=20.1.8=h8869778_0
-  - libdeflate=1.22=h80987f9_0
-  - libffi=3.4.4=hca03da5_1
-  - libgfortran=5.0.0=11_3_0_hca03da5_28
-  - libgfortran5=11.3.0=h009349e_28
-  - libglib=2.84.2=hdc2269c_0
-  - libiconv=1.16=h80987f9_3
-  - libjpeg-turbo=2.0.0=h1a28f6b_0
-  - libopenblas=0.3.29=hea593b9_0
-  - libpng=1.6.39=h80987f9_0
-  - libtiff=4.7.0=h91aec0a_0
-  - libwebp-base=1.3.2=h80987f9_1
-  - libxml2=2.13.8=h0b34f26_0
-  - libzlib=1.3.1=h5f15de7_0
-  - llvm-openmp=20.1.8=he822017_0
-  - lz4-c=1.9.4=h313beb8_1
-  - markupsafe=3.0.2=py312h80987f9_0
-  - matplotlib=3.10.5=py312hca03da5_0
-  - matplotlib-base=3.10.5=py312h0126ab4_0
-  - mpc=1.3.1=h80987f9_0
-  - mpfr=4.2.1=h80987f9_0
-  - mpmath=1.3.0=py312hca03da5_0
-  - ncurses=6.5=hee39554_0
-  - networkx=3.5=py312hca03da5_0
-  - numexpr=2.11.0=py312h8c72970_1
-  - numpy=1.26.4=py312h901140f_1
-  - numpy-base=1.26.4=py312hae06d03_1
-  - openjpeg=2.5.2=hba36e21_1
-  - openssl=3.0.17=h4ee41c1_0
-  - packaging=25.0=py312hca03da5_0
-  - pandas=2.3.2=py312h43d6402_0
-  - pcre2=10.42=hb066dcc_1
-  - pillow=11.3.0=py312h6dd570d_0
-  - pip=25.2=pyhc872135_0
-  - pixman=0.46.4=h09dc60e_0
-  - pycparser=2.23=py312hca03da5_0
-  - pyparsing=3.2.0=py312hca03da5_0
-  - pysocks=1.7.1=py312hca03da5_0
-  - python=3.12.11=h421de30_0
-  - python-dateutil=2.9.0post0=py312hca03da5_2
-  - python-tzdata=2025.2=pyhd3eb1b0_0
-  - pytorch=2.2.2=py3.12_0
-  - pytorch-mutex=1.0=cpu
-  - pytz=2025.2=py312hca03da5_0
-  - pyyaml=6.0.2=py312h80987f9_0
-  - readline=8.3=h0b18652_0
-  - requests=2.32.5=py312hca03da5_0
-  - scikit-learn=1.7.1=py312h6e33161_0
-  - scipy=1.16.1=py312h53ebd84_0
-  - seaborn=0.13.2=py312hca03da5_3
-  - setuptools=78.1.1=py312hca03da5_0
-  - six=1.17.0=py312hca03da5_0
-  - sqlite=3.50.2=h79febb2_1
-  - sympy=1.14.0=py312hca03da5_0
-  - threadpoolctl=3.5.0=py312h989b03a_0
-  - tk=8.6.15=hcd8a7d5_0
-  - torchaudio=2.2.2=py312_cpu
-  - torchvision=0.17.2=py312_cpu
-  - tornado=6.5.1=py312h80987f9_0
-  - typing_extensions=4.15.0=py312hca03da5_0
-  - tzdata=2025b=h04d1e81_0
-  - unicodedata2=15.1.0=py312h80987f9_1
-  - urllib3=2.5.0=py312hca03da5_0
-  - wheel=0.45.1=py312hca03da5_0
-  - xz=5.6.4=h80987f9_1
-  - yaml=0.2.5=h1a28f6b_0
-  - zlib=1.3.1=h5f15de7_0
-  - zstd=1.5.6=hfb09047_0
-prefix: /opt/anaconda3/envs/pytorch_learn_env
+  - python=3.12
+  - pytorch
+  - torchvision
+  - numpy
+  - matplotlib
+  - pillow
+  - pip
