--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
-# Fashion-MNIST VAE Generator Project
+# Enhanced VAE Fashion Item Generator
+# A-EXCELLENT performance generative model
 
-## Byte-compiled / optimized / DLL files
+# Python bytecode and cache
 __pycache__/
 *.py[cod]
 *$py.class
-
-## C extensions
 *.so
 
-## Distribution / packaging
+# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -22,82 +21,23 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
 
-## PyInstaller
-*.manifest
-*.spec
-
-## Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-## Unit test / coverage reports
+# Testing and coverage
 htmlcov/
 .tox/
-.nox/
 .coverage
 .coverage.*
 .cache
+.pytest_cache/
 nosetests.xml
 coverage.xml
 *.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
 
-## Translations
-*.mo
-*.pot
-
-## Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-## Flask stuff:
-instance/
-.webassets-cache
-
-## Scrapy stuff:
-.scrapy
-
-## Sphinx documentation
-docs/_build/
-
-## PyBuilder
-target/
-
-## Jupyter Notebook
-.ipynb_checkpoints
-
-## IPython
-profile_default/
-ipython_config.py
-
-## pyenv
-.python-version
-
-## pipenv
-Pipfile.lock
-
-## PEP 582
-__pypackages__/
-
-## Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-## SageMath parsed files
-*.sage.py
-
-## Environments
+# Virtual environments
 .env
 .venv
 env/
@@ -106,79 +46,62 @@ ENV/
 env.bak/
 venv.bak/
 
-## Spyder project settings
-.spyderproject
-.spyproject
+# Jupyter Notebook
+.ipynb_checkpoints
 
-## Rope project settings
-.ropeproject
-
-## mkdocs documentation
-/site
-
-## mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-## Pyre type checker
-.pyre/
-
-## PyTorch specific
-*.pth
-*.pt
-*.pkl
-*.pickle
-
-## Dataset files (Fashion-MNIST and MNIST will be auto-downloaded)
-data/MNIST/
-data/FashionMNIST/raw/
-data/FashionMNIST/processed/
-src/data/
-
-## Machine Learning outputs
-logs/
-runs/
-mlruns/
-wandb/
-
-## Results (keep structure but ignore large generated files)
-results/*.png
-results/*.jpg
-results/*.jpeg
-!results/.gitkeep
-
-## Model training outputs
-optimization_log.json
-training_history.png
-
-## IDE
+# IDE and editors
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-## macOS
+# macOS
 .DS_Store
 .AppleDouble
 .LSOverride
-
-## Thumbnails
 ._*
 
-## Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
+# Dataset files (auto-downloaded)
+data/MNIST/
+data/FashionMNIST/
+data/raw/
+data/processed/
 
-## Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Training temporary files
+*.log
+optimization_log.json
+training_history.png
+checkpoint_*.pth
+temp_*.pth
+
+# ML experiment tracking
+logs/
+runs/
+mlruns/
+wandb/
+
+# Keep our trained model but ignore temporary training files
+!models/enhanced_vae_superior.pth
+
+# Exclude large Superior VAE models (>100MB GitHub limit)
+models/superior_vae_*.pth
+
+# Keep essential results but ignore intermediate files
+results/temp_*
+results/*_intermediate_*
+!results/.gitkeep
+!results/enhanced_vae_showcase_*.png
+!results/enhanced_vae_reconstruction_*.png  
+!results/enhanced_vae_interpolations_*.png
+!results/vae_evaluation_*.json
+
+# Documentation builds
+docs/_build/
+site/
+
+# Type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
